--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
+	id 'fabric-loom' version '1.0-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -15,7 +15,7 @@ repositories {
 		url "https://maven.shedaniel.me/"
 	}
 	maven {
-		url = 'https://maven.terraformersmc.com/'
+		url 'https://maven.terraformersmc.com/releases/'
 	}
 }
 
@@ -24,6 +24,9 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
+		transitive = false
+	}
 	includeMod "me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}"
 }
 
