Implementation of Architectury + changed some of the logic and the config

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,18 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
-fabric_version=0.55.1+1.19
-clothconfig_version=7.0.59
-modmenu_version=3.0.1
+minecraft_version=1.19.2
+enabled_platforms=fabric,forge
 
-mod_version = 1.5.1
-maven_group = net.ludocrypt
-archives_base_name = dynamic-music
+archives_base_name=dynmus
+mod_version=2.0.0
+maven_group=net.celeri.dynmus
+
+architectury_version=6.2.43
+
+fabric_loader_version=0.14.9
+fabric_api_version=0.59.0+1.19.2
+
+forge_version=1.19.2-43.0.8
+
+
+
