--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=dynmus
-mod_version=2.0.0b
+mod_version=2.0.0c
 maven_group=net.celeri.dynmus
 
 architectury_version=6.2.43
