--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,12 @@
+repositories {
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+}
+
 architectury {
     common(rootProject.enabled_platforms.split(","))
 }
-
 loom {
     accessWidenerPath = file("src/main/resources/dynmus.accesswidener")
 }
@@ -10,6 +15,8 @@ dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modCompileOnlyApi "maven.modrinth:midnightlib:${rootProject.midnightlib_version}-fabric"
+
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
 }
