--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -4,10 +4,7 @@ plugins {
 
 repositories {
     maven {
-        url "https://maven.shedaniel.me/"
-    }
-    maven {
-        url 'https://maven.terraformersmc.com/releases/'
+        url "https://api.modrinth.com/maven"
     }
 }
 
@@ -34,9 +31,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
-    modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
-    modImplementation "me.shedaniel.cloth:cloth-config-fabric:${clothconfig_version}"
-    include "me.shedaniel.cloth:cloth-config-fabric:${clothconfig_version}"
+    modImplementation "maven.modrinth:midnightlib:${rootProject.midnightlib_version}-fabric"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
