went back to cloth-config to make the config screen more readable (different sections + foldable portions) + every music can now be activated in Survival/Creative Mode or both

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -4,7 +4,10 @@ plugins {
 
 repositories {
     maven {
-        url "https://api.modrinth.com/maven"
+        url "https://maven.shedaniel.me/"
+    }
+    maven {
+        url "https://maven.terraformersmc.com/releases/"
     }
 }
 
@@ -31,7 +34,8 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
-    modImplementation "maven.modrinth:midnightlib:${rootProject.midnightlib_version}-fabric"
+    modApi "me.shedaniel.cloth:cloth-config-fabric:${rootProject.clothconfig_version}"
+    modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
