--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,6 +1,6 @@
 repositories {
     maven {
-        url = "https://api.modrinth.com/maven"
+        url "https://maven.shedaniel.me/"
     }
 }
 
@@ -17,7 +17,7 @@ dependencies {
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 
-    modCompileOnlyApi "maven.modrinth:midnightlib:${rootProject.midnightlib_version}-fabric"
+    modCompileOnlyApi "me.shedaniel.cloth:cloth-config-fabric:${rootProject.clothconfig_version}"
 
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
