--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 repositories {
     maven {
-        url "https://api.modrinth.com/maven"
+        url "https://maven.shedaniel.me/"
     }
 }
 
@@ -38,7 +38,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
-    modImplementation "maven.modrinth:midnightlib:${rootProject.midnightlib_version}-forge"
+    modApi "me.shedaniel.cloth:cloth-config-forge:${rootProject.clothconfig_version}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
