--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -34,8 +34,8 @@ ordering = "AFTER"
 side = "CLIENT"
 
 [[dependencies.dynmus]]
-modId = "midnightlib"
+modId = "cloth_config"
 mandatory = true
-versionRange = "[1.0.0,)"
+versionRange = "[8.2.88,)"
 ordering = "AFTER"
 side = "CLIENT"
