--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=dynmus
-mod_version=2.1.0+1.19.2
+mod_version=2.2.0+1.19.2
 maven_group=net.celeri.dynmus
 
 architectury_version=6.2.43
-midnightlib_version=1.0.0
+clothconfig_version=8.2.88
 
 fabric_loader_version=0.14.9
 fabric_api_version=0.59.0+1.19.2
