went back to cloth-config to make the config screen more readable (different sections + foldable portions) + every music can now be activated in Survival/Creative Mode or both

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -34,8 +34,8 @@ ordering = "AFTER"
 side = "CLIENT"
 
 [[dependencies.dynmus]]
-modId = "midnightlib"
+modId = "cloth_config"
 mandatory = true
-versionRange = "[1.1.0,)"
+versionRange = "[9.0.94,)"
 ordering = "AFTER"
 side = "CLIENT"
