--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ minecraft_version=1.19.3
 enabled_platforms=fabric,forge
 
 archives_base_name=dynmus
-mod_version=2.1.0+1.19.3
+mod_version=2.2.0+1.19.3
 maven_group=net.celeri.dynmus
 
 architectury_version=7.0.64
-midnightlib_version=1.1.0
+clothconfig_version=9.0.94
 
 fabric_loader_version=0.14.11
 fabric_api_version=0.68.1+1.19.3
