--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.17.1
 enabled_platforms=fabric,forge
 
 archives_base_name=dynmus
-mod_version=2.2.2+1.17.1
+mod_version=2.2.2b+1.17.1
 maven_group=net.celeri.dynmus
 
 architectury_version=2.10.12
