--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,12 @@
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.17.1
-enabled_platforms=fabric,forge
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.10
+loader_version=0.11.3
+fabric_version=0.42.0+1.16
+clothconfig_version=4.17.101
+modmenu_version=1.16.23
 
-archives_base_name=dynmus
-mod_version=2.3.1+1.17.1
-maven_group=net.celeri.dynmus
-
-architectury_version=2.10.12
-clothconfig_version=5.3.63
-
-fabric_loader_version=0.12.12
-fabric_api_version=0.42.1+1.17
-
-forge_version=1.17.1-37.1.1
-
-
-
+mod_version = 1.2.1
+maven_group = net.spongecade
+archives_base_name = dynamic-music
